added entities for spring data jpa and sql script

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
+folderId=1zKPJwmNcQCNYTzZGxTuBTgLuJTanRhA5
+sheetsMimitype=application/vnd.google-apps.spreadsheet
+excelMimitype=application/vnd.openxmlformats-officedocument.spreadsheetml.sheet
+
+courseCell=H6
+
 spring.datasource.url=jdbc:h2:mem:students
 spring.datasource.driverClassName=org.h2.Driver
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
