added repos for jpa entities and rewrite db script and entities for 3rd form database normalization

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,12 @@
-folderId=1zKPJwmNcQCNYTzZGxTuBTgLuJTanRhA5
-sheetsMimitype=application/vnd.google-apps.spreadsheet
-excelMimitype=application/vnd.openxmlformats-officedocument.spreadsheetml.sheet
+
+sheetsMimetype=application/vnd.google-apps.spreadsheet
+excelMimetype=application/vnd.openxmlformats-officedocument.spreadsheetml.sheet
+
+searchMimetypes=${sheetsMimetype},${excelMimetype}
+searchFolderId=1zKPJwmNcQCNYTzZGxTuBTgLuJTanRhA5
 
 courseCell=H6
+lectorCell=D13:H13
 
 spring.datasource.url=jdbc:h2:mem:students
 spring.datasource.driverClassName=org.h2.Driver
